--- a/package.json
+++ b/package.json
@@ -46,5 +46,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
+  },
+    "engines": {
+    "node": "10.15.1",
+    "npm": "6.4.1"
   }
 }
